fix: schedule, misc
